feat: prepare to deploy vercel

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "back end for store auto parts",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "19.x"
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "serve": "cross-env NODE_ENV=development nodemon index.js"
