--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": "18"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
