--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": "19.7.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
@@ -18,6 +18,7 @@
     "chalk": "^5.2.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.15.0",
