feat: add prod mode

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ MONGO_URL="mongodb+srv://adminDb:gepjop-1nyhru-memxiC@cluster0.ghruqq8.mongodb.n
 PORT=8888
 ACCEESS_SECRET="khbkhbuwb-ou-oururghugiv"
 REFRESH_SECRET="supercuuiubyyttyiyiuiyvuwr--rev"
-PROD='no'
+PROD='yes'
 DEV_URL="http://127.0.0.1:5173"
-PROD_URL="https://front-autoparts.herokuapp.com"
+PROD_URL="https://auto-gomel-front.vercel.app"
