--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ node_modules
 dist
 config
 dist-ssr
-*.local
 *.env
+*.env.example
+*.env.local
+*.env.staging
 
 # Editor directories and files
 .vscode/*
