--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": "19.7.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "serve": "cross-env NODE_ENV=development nodemon index.js"
+    "start": "node index.js",
+    "serve": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
