--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ PORT=8888
 ACCEESS_SECRET="khbkhbuwb-ou-oururghugiv"
 REFRESH_SECRET="supercuuiubyyttyiyiuiyvuwr--rev"
 PROD='yes'
-DEV_URL="http://localhost:5173"
+DEVC_URL="http://127.0.0.1:5174"
+DEVA_URL="http://127.0.0.1:5173"
 PROD_URL="https://auto-gomel-front.vercel.app"
