--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REFRESH_SECRET="supercuuiubyyttyiyiuiyvuwr--rev"
 PROD='yes'
 DEVC_URL="http://127.0.0.1:5174"
 DEVA_URL="http://127.0.0.1:5173"
-PROD_URL="https://auto-gomel-front.vercel.app"
+PROD_URL="http://xn--80aedi4aemb7a3h.xn--90ais/"
