--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ ACCEESS_SECRET="khbkhbuwb-ou-oururghugiv"
 REFRESH_SECRET="supercuuiubyyttyiyiuiyvuwr--rev"
 PROD='yes'
 DEVC_URL="http://127.0.0.1:5174"
-DEVA_URL="http://127.0.0.1:5173"
+# DEVA_URL="http://127.0.0.1:5173"
+DEVA_URL="https://back-autoparts.onrender.com"
 PROD_URL="http://xn--80aedi4aemb7a3h.xn--90ais/"
