--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ REFRESH_SECRET="supercuuiubyyttyiyiuiyvuwr--rev"
 PROD='yes'
 DEVC_URL="http://127.0.0.1:5174"
 # DEVA_URL="http://127.0.0.1:5173"
-DEVA_URL="https://back-autoparts.onrender.com"
-PROD_URL="http://xn--80aedi4aemb7a3h.xn--90ais/"
+DEVA_URL="https://admin-panel-nu-five.vercel.app"
+PROD_URL="http://xn--80aedi4aemb7a3h.xn--90ais"
