--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "name": "back-autoparts",
   "builds": [
     {
-      "src": "./index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./index.js"
+      "dest": "index.js"
     }
   ]
 }
