--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "engines": {
-    "node": "19.7.0"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node index.js",
